# rules_foreign_cc

examples/: WORKSPACE.bazel
foreign_cc/: repositories.bzl
foreign_cc/built_tools/: make_build.bzl
foreign_cc/built_tools/private/: BUILD.bazel  built_tools_framework.bzl
foreign_cc/private/: configure_script.bzl  framework.bzl
toolchains/: BUILD.bazel  built_toolchains.bzl
