load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//foreign_cc/built_tools/private:built_tools_framework.bzl", "executor_type")

bzl_library(
    name = "bzl_srcs",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//:__subpackages__"],
)

executor_type(
    name = "executor_type",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)